_SOFTWARE_FACTORY/_archive/veligo/ralph-wiggum/logs/T015_20260112_182545.log
Je vais résoudre les 4 tests skippés de l'API Tracking. Commençons par examiner les tests.
[96m[1m| [0m[90m Read     [0mveligo-platform/tests/e2e/api/tracking.api.spec.ts
4 tests skippés identifiés (TRACKING.02-05). Vérifions maintenant le code backend.
[94m[1m| [0m[90m Glob     [0m{"pattern":"**/tracking*.rs"}
[94m[1m| [0m[90m Glob     [0m{"pattern":"**/api/tracking*"}
[94m[1m| [0m[90m Grep     [0mtracking.*bike|bike.*tracking
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/infrastructure/tracking/routes.rs
L'endpoint existe déjà. Vérifions s'il est bien enregistré dans l'application principale.
[94m[1m| [0m[90m Grep     [0mtracking_routes|tracking/
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/bin/http-server.rs
[94m[1m| [0m[90m Grep     [0mfn require_auth
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/infrastructure/http/middleware/auth.rs
[96m[1m| [0m[90m Read     [0mveligo-platform/tests/e2e/fixtures/users.json
Vérifions si l'endpoint est accessible sur l'API de production.
[91m[1m| [0m[90m Bash     [0mCheck if tracking endpoint returns 401

404
[91m[1m| [0m[90m Bash     [0mTry login to get auth token
[91m[1m| [0m[90m Bash     [0mCheck API health endpoint

200
[91m[1m| [0m[90m Bash     [0mGet health check response

{"status":"ok","timestamp":"2026-01-12T17:21:38.445035064+00:00"}
[94m[1m| [0m[90m Grep     [0mroute.*auth|auth.*route
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/api/auth.rs
[91m[1m| [0m[90m Bash     [0mTry login with POST to api.veligo.app
[94m[1m| [0m[90m Grep     [0mpub async fn login_handler
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/api/auth.rs
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/api/auth.rs
[94m[1m| [0m[90m Grep     [0mstruct LoginResponse
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/api/auth.rs
Le problème est que l'endpoint `/api/tracking/bike/123` retourne 404. Vérifions si les routes tracking sont bien déployées sur production.
[91m[1m| [0m[90m Bash     [0mCheck if tracking devices endpoint exists

404
[91m[1m| [0m[90m Bash     [0mCheck tracking API root

Les routes tracking ne sont pas déployées. Vérifions la configuration nginx.
[94m[1m| [0m[90m Glob     [0m{"pattern":"**/nginx/**"}
[96m[1m| [0m[90m Read     [0mveligo-platform/nginx/veligo-api.conf
Vérifions si le backend HTTP tourne sur le port 8888.
[91m[1m| [0m[90m Bash     [0mTest tracking endpoint locally
[91m[1m| [0m[90m Bash     [0mTest auth login locally
Le backend n'est pas localement actif. Vérifions si le module tracking est bien configuré dans le backend.
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/bin/http-server.rs
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/bin/http-server.rs
Le code backend semble correct. Vérifions si le backend compile.
[91m[1m| [0m[90m Bash     [0mCheck if backend compiles

  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `error`
 --> backend/src/infrastructure/email/queue.rs:9:22
  |
9 | use tracing::{debug, error, info, warn};
  |                      ^^^^^

warning: unused import: `error`
  --> backend/src/infrastructure/email/mod.rs:23:15
   |
23 | use tracing::{error, info, warn};
   |               ^^^^^

warning: unused import: `error`
  --> backend/src/infrastructure/erp/erp_client.rs:12:22
   |
12 | use tracing::{debug, error, info};
   |                      ^^^^^

warning: unused import: `error`
  --> backend/src/infrastructure/multimodal/tcl_client.rs:18:22
   |
18 | use tracing::{debug, error, info, warn};
   |                      ^^^^^

Some errors have detailed explanations: E0432, E0583.
For more information about an error, try `rustc --explain E0432`.
warning: `veligo-api` (lib) generated 5 warnings
error: could not compile `veligo-api` (lib) due to 2 previous errors; 5 warnings emitted

[91m[1m| [0m[90m Bash     [0mCheck compilation errors
[91m[1m| [0m[90m Bash     [0mCheck backend compilation errors

error: no library targets found in package `veligo`

[91m[1m| [0m[90m Bash     [0mCheck backend compilation in backend dir

warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend/Cargo.toml
workspace: /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/Cargo.toml
    Checking veligo-api v0.1.0 (/Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend)
error[E0583]: file not found for module `tracking`
  --> backend/src/infrastructure/http/mod.rs:16:1
   |
16 | pub mod tracking; // 🆕 2026-01-12 - GPS tracking with Abeeway
   | ^^^^^^^^^^^^^^^^^
   |
   = help: to create the module `tracking`, create file "backend/src/infrastructure/http/tracking.rs" or "backend/src/infrastructure/http/tracking/mod.rs"
   = note: if there is a `mod tracking` elsewhere in the crate already, import it with `use crate::...` instead

error[E0432]: unresolved import `tenant_theme_routes::tenant_config_routes`
  --> backend/src/infrastructure/http/mod.rs:31:9
   |
31 | pub use tenant_theme_routes::tenant_config_routes;
   |         ^^^^^^^^^^^^^^^^^^^^^--------------------
   |         |                    |
   |         |                    help: a similar name exists in the module: `tenant_theme_routes`
   |         no `tenant_config_routes` in `infrastructure::http::tenant_theme_routes`

warning: unused import: `Method`
 --> backend/src/api/test_api.rs:8:12
  |
8 |     http::{Method, StatusCode},
  |            ^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `error`
 --> backend/src/infrastructure/email/queue.rs:9:22
  |
9 | use tracing::{debug, error, info, warn};
  |                      ^^^^^

warning: unused import: `error`
  --> backend/src/infrastructure/email/mod.rs:23:15
   |
23 | use tracing::{error, info, warn};
   |               ^^^^^

warning: unused import: `error`
  --> backend/src/infrastructure/erp/erp_client.rs:12:22
   |
12 | use tracing::{debug, error, info};
   |                      ^^^^^

warning: unused import: `error`
  --> backend/src/infrastructure/multimodal/tcl_client.rs:18:22

Il y a une erreur de compilation - le module tracking n'est pas correctement importé. Vérifions le fichier mod.rs.
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/infrastructure/http/mod.rs
Le module tracking est déclaré mais le fichier n'existe pas au bon endroit. Regardons où se trouve le fichier tracking routes.
[91m[1m| [0m[90m Bash     [0mList tracking directory contents

total 232
drwxr-xr-x   9 sylvain  staff    288 Dec 29 22:05 .
drwxr-xr-x  29 sylvain  staff    928 Jan  9 06:55 ..
-rw-------   1 sylvain  staff   4438 Dec 26 22:37 README.md
-rw-------   1 sylvain  staff  16702 Dec 29 22:05 abeeway_client.rs
-rw-------   1 sylvain  staff   7329 Dec 26 22:44 config.rs
-rw-------   1 sylvain  staff  18159 Dec 28 02:18 distance.rs
-rw-------   1 sylvain  staff    604 Jan 12 18:20 mod.rs
-rw-------   1 sylvain  staff  26593 Dec 28 02:19 repository.rs
-rw-------   1 sylvain  staff  27062 Jan 12 18:18 routes.rs

[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/infrastructure/tracking/mod.rs
Le problème est que le module `tracking` est déclaré dans `http/mod.rs` mais le code est dans `infrastructure/tracking/`. Je dois corriger l'import.
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/bin/http-server.rs
Je dois corriger l'import du module tracking dans http-server.rs.
[92m[1m| [0m[90m Edit     [0mveligo-platform/backend/src/bin/http-server.rs
Maintenant, je dois supprimer la déclaration du module tracking dans http/mod.rs.
[92m[1m| [0m[90m Edit     [0mveligo-platform/backend/src/infrastructure/http/mod.rs
[92m[1m| [0m[90m Edit     [0mveligo-platform/backend/src/infrastructure/http/mod.rs
Vérifions si le backend compile maintenant.
